--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ timezone: UTC
 baseurl: "/"
 permalink: "/:title/"
 logo: 'assets/images/logo.png'
-favicon: 'assets/images/favicon.png'
+favicon: 'assets/images/favicon.ico'
 author: professor-xai
 paginate: 30
 disqus: 'demowebsite'
