--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: "Rogue Marketing"
 email: areebaiqbal464@gmail.com
 timezone: UTC
-baseurl: "/"
+baseurl: ""
 permalink: "/:title/"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
