--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ authors:
 # Social
 social:
   instagram: https://www.instagram.com/ai.viewz/
-  facebook: https://www.facebook.com/bootstrapstartercom-346329609045284
+  facebook: https://web.facebook.com/aiviewz
   twitter:  https://x.com/ai_viewz
 
 # Plugins
