--- a/_config.yml
+++ b/_config.yml
@@ -51,9 +51,9 @@ authors:
 
 # Social
 social:
-  instagram: https://www.instagram.com/ai.viewz/
-  facebook: https://web.facebook.com/aiviewz
-  twitter:  https://x.com/ai_viewz
+  instagram: https://www.instagram.com/the_rogue_dynamics/
+  facebook: https://web.facebook.com/the_rogue_dynamics/
+  twitter:  https://x.com/rogue_dynamics
 
 # Plugins
 plugins: 
